# allspeak.ai

./: .gitignore  AGENT.md  AGENTS.md  BUILD.md  CLAUDE.md  NOTES-i18n-nice-to-have.md  NOTES-i18n-polish.md  README.md  RELEASE_NOTES.md  action-animate.md  agent-primer-js.md  agent-primer-python.md  asedit.as  build-allspeak  build-starters  codex.html  deploy-all  deploy-allspeak  deploy-sync  deploy.sh  developer.md  ecedit.html  edit.html  language-pack-issues.md  mapintel-agent-primer.md  package-lock.json  package.json  primer.md  prompt.md  server.as  test.html  tests-allspeak.html  tests-italiano.html
.claude/: settings.json
AI/: ALLSPEAK_AND_WEBSON.md  ALLSPEAK_CODING_GUIDELINES.md  CONTRIBUTOR_NOTES.md  PROJECT_OVERVIEW.md  allspeak-llm-primer-compact.md
allspeak-py/: README.md  pyproject.toml  testsql.as  testsqlite.as
allspeak-py/AI/: PROJECT_OVERVIEW.md
allspeak-py/AI/examples/wordlist/: wordlist.as
allspeak-py/AI/log/: DEVELOPER_RESOURCES.md
allspeak-py/allspeak/: __init__.py  as_core.py  as_mqtt.py  as_program.py  as_server.py
allspeak-py/allspeak/languages/: de.json  en.json  fr.json  it.json
allspeak-py/doc/core/keywords/: begin.md  browse.md  clear.md  negate.md
allspeak-py/plugins/: as_sql.py
allspeak-py/spec/: allspeak-plugin-contract.md  allspeak-versioning-policy.md
allspeak-py/sql/: as_sql.py  claude.txt
chat/: index.html
code/: CLAUDE.md  README.md  allspeak.as  asedit.as  ecedit.as  ecedit.json  edit.html  zip.sh
conversation/: conversation-001.md  conversation-002.md  conversation-003.md
deploy/: .htaccess  codex.html  config.json  index.html  primer.html
documents/: AllSpeak_Working_Paper_Draft.docx  AllSpeak_Working_Paper_v2.docx  conversation.md
languages/: en.json  it.json
learn/: contents.md  index.html  manifest.json  reader.as
primer/: README.md  (+4 more)
(+313 files in other folders)
