[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "allspeak-ai"
authors = [{name = "Graham Trott", email = "gtanyware@gmail.com"}]
description = "AllSpeak — multilingual high-level scripting designed for AI-assisted coding"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
keywords = ["compiler", "scripting", "ai-coding", "multilingual", "low code", "hypertalk", "learn to code"]
dynamic = ["version"]
dependencies = [
    "pytz",
    "requests",
    "psutil",
    "paramiko",
    "pyside6",
    "paho-mqtt",
    "bottle"
]

[tool.flit.module]
name = "allspeak"

[tool.flit.sdist]
include = ["as_*.py", "*.png", "languages/*.json"]

[project.scripts]
allspeak = "allspeak:Main"

[project.urls]
Home = "https://github.com/allspeak.ai/allspeak-py"
